--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -31,14 +31,6 @@ block content
         section.masters
             div.master-card
                 div.master
-                    //a(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B4%D1%80%D0%B5%D0%B9' target="_blank")
-                    img.master__photo(src=require("../images/index/ks-vol.jpg"))
-                    div.master__wrapper
-                        p.master__name Ксения
-                        p.master__name.master__name--light черно-белый реализм
-                        a.li(href='master.html')
-                            button.butt ПОДРОБНЕЕ
-                div.master
                     img.master__photo(src=require("../images/index/ks-os.jpg"))
                     div.master__wrapper
                         p.master__name Ксения
@@ -49,8 +41,16 @@ block content
                     img.master__photo(src=require("../images/index/maria.jpg"))
                     div.master__wrapper
                         p.master__name Мария
-                        p.master__name.master__name--light администратор
+                        p.master__name.master__name--light графика
                         a.li(href='masterMK.html')
+                            button.butt ПОДРОБНЕЕ
+                div.master
+                    //a(href='https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D0%B4%D1%80%D0%B5%D0%B9' target="_blank")
+                    img.master__photo(src=require("../images/index/ks-vol.jpg"))
+                    div.master__wrapper
+                        p.master__name Ксения
+                        p.master__name.master__name--light черно-белый реализм
+                        a.li(href='master.html')
                             button.butt ПОДРОБНЕЕ
         h2 ПОСЛЕДНИЕ РАБОТЫ
         section.last-worck
