--- a/src/pages/masterKO.pug
+++ b/src/pages/masterKO.pug
@@ -15,10 +15,10 @@ block content
                         div.master-box__text-description
                             div
                                 p.master-box__name Ксения
-                                p.master-box__sector Мастер цветной татуировки
-                                p.master-box__desc Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi architecto, autem commodi cum delectus dolorem ipsum numquam odio perspiciatis velit? Ad maiores minima reprehenderit! Consequuntur eaque labore minus nam quibusdam quis repellendus reprehenderit temporibus voluptatem.
+                                p.master-box__sector Цветная татуировка
+                                p.master-box__desc Уважаю Ваш выбор тату и всегда готова подсказать лучшие варианты реализации. Предпочитаю работы в стилях акварель и графика. Хочу, чтобы по улицам нашего города ходили как можно больше людей с качественными и уникальными изображениями на теле! Без проблем сделаю перекрытие старой тату или замаскирую шрам!
                             div
-                                a(href="#")
+                                a(href="https://www.instagram.com/_oktattoo_/" target='_blank')
                                     img.master-box__inst(src=require("../images/masters/instagram.svg"))
                         img.master__photo.master__photo--size(src=require("../images/index/ks-os.jpg"))
     section.inner
