--- a/src/styles/scss/faq.scss
+++ b/src/styles/scss/faq.scss
@@ -11,6 +11,7 @@
 }
 .questions-item{
   margin: 10px 0 10px;
+  font-family: 'Lora', serif;
 
   .questions-item__questions{
     background-color: rgba(109, 112, 119, 0.15);
