--- a/src/pages/master.pug
+++ b/src/pages/master.pug
@@ -15,10 +15,10 @@ block content
                         div.master-box__text-description
                             div
                                 p.master-box__name Ксения
-                                p.master-box__sector Мастер чб-реализма
+                                p.master-box__sector черно-белый реализм
                                 p.master-box__desc Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi architecto, autem commodi cum delectus dolorem ipsum numquam odio perspiciatis velit? Ad maiores minima reprehenderit! Consequuntur eaque labore minus nam quibusdam quis repellendus reprehenderit temporibus voluptatem.
                             div
-                                a(href="#")
+                                a(href="https://www.instagram.com/plagintattoo/" target='_blank')
                                     img.master-box__inst(src=require("../images/masters/instagram.svg"))
                         img.master__photo.master__photo--size(src=require("../images/index/ks-vol.jpg"))
     section.inner
