--- a/src/pages/masterMK.pug
+++ b/src/pages/masterMK.pug
@@ -15,10 +15,10 @@ block content
                         div.master-box__text-description
                             div
                                 p.master-box__name Мария
-                                p.master-box__sector Мастер ...
-                                p.master-box__desc Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi architecto, autem commodi cum delectus dolorem ipsum numquam odio perspiciatis velit? Ad maiores minima reprehenderit! Consequuntur eaque labore minus nam quibusdam quis repellendus reprehenderit temporibus voluptatem.
+                                p.master-box__sector Графика
+                                p.master-box__desc Меня зовут Мария Ковалёва, и я с радостью помогу тебе сделать татуировку своей мечты! Работаю мастером татуировки в целом уже более 6 лет, а последние 4 года - в самой уютной студии Забей, в самом лучшем коллективе. Я - универсал, могу работать во многих техниках, но отдаю предпочтение графике и лайнворку. Наглядно покажу тебе какими кайфовыми могут быть контура! До встречи на сеансе!
                             div
-                                a(href="#")
+                                a(href="https://www.instagram.com/m.kovaleva.tattoo/" target='_blank')
                                     img.master-box__inst(src=require("../images/masters/instagram.svg"))
                         img.master__photo.master__photo--size(src=require("../images/index/maria.jpg"))
     section.inner
