--- a/src/pages/recording.pug
+++ b/src/pages/recording.pug
@@ -6,7 +6,7 @@ append sharedVars
     - const pageAdditionClass = 'main-page';
 block content
     section#add
-
+        div#vue-rec
     //section.inner
         section.record
             form.form-legend
