--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,6 +6,7 @@
 @import "scss/recording";
 @import "scss/masters";
 @import "../../node_modules/normalize.css/normalize.css";
+@import '../../node_modules/bootstrap/dist/css/bootstrap.min.css';
 //@import '../../node_modules/owl.carousel/dist/assets/owl.carousel.min.css';
 //@import '../../node_modules/owl.carousel/dist/assets/owl.theme.default.min.css';
 //@import '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min.css';
