--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -24,9 +24,10 @@ block content
                     img(src=require("../images/index/sketch.svg"))
             div.tattoo.services__block
                 p.services__title ХУДОЖЕСТВЕННАЯ ТАТУИРОВКА
-                div.block-decor
-                    div.fon
-                    img(src=require("../images/index/tattoo.svg"))
+                a(href='recording.html').l-s
+                    div.block-decor
+                        div.fon
+                        img(src=require("../images/index/tattoo.svg"))
         h2 МАСТЕРА
         section.masters
             div.master-card
