--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -19,9 +19,10 @@ block content
                         img(src=require("../images/index/consultation.svg"))
             div.sketch.services__block
                 p.services__title ИНДИВИДУАЛЬНЫЙ ЭСКИЗ
-                div.block-decor
-                    div.fon
-                    img(src=require("../images/index/sketch.svg"))
+                a(href='sketch.html').l-s
+                    div.block-decor
+                        div.fon
+                        img(src=require("../images/index/sketch.svg"))
             div.tattoo.services__block
                 p.services__title ХУДОЖЕСТВЕННАЯ ТАТУИРОВКА
                 a(href='recording.html').l-s
