--- a/src/pages/recording.pug
+++ b/src/pages/recording.pug
@@ -7,6 +7,9 @@ append sharedVars
 block content
     section.inner
         h2.title-style-other-pages Запись
+    div.back-fon-page
+        img.back-fon-page__img(src=require("../images/recording/rec.jpg"))
         div.content-page
             div#vue-rec
+
 
