--- a/src/pages/sketch.pug
+++ b/src/pages/sketch.pug
@@ -7,5 +7,7 @@ append sharedVars
 block content
     section.inner
         h2.title-style-other-pages Эскиз
+    div.back-fon-page
+        img.back-fon-page__img(src=require("../images/sketch/absol.jpg"))
         div.content-page
             div#vue-sketch
