--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -5,13 +5,17 @@
   src: url("/src/fonts/FinistC.otf") format("opentype");
 }
 
+a:hover{
+  text-decoration: none;
+}
+
 h2{
   text-align: center;
   font-family: FinistC;
   letter-spacing: 5px;
   font-size: 35px;
   color: $colorMenu;
-  margin: 100px 0;
+  margin: 80px 0;
 }
 p{
   font-family: 'Lora', serif;
@@ -142,6 +146,7 @@ p{
   cursor: pointer;
   font-family: 'Lora', serif;
 }
+
 
 //ПОСЛЕДНИЕ РАБОТЫ
 
