--- a/src/pages/include/layout.pug
+++ b/src/pages/include/layout.pug
@@ -11,8 +11,8 @@ html(lang="en")
                 img.header__logo(src=require("../images/layout/logo.svg"))
             nav.menu
                 a(href='/').menu__link ГЛАВНАЯ
-                a(href='#').menu__link ЭСКИЗ
                 a(href='recording.html').menu__link ЗАПИСЬ
+                a(href='sketch.html').menu__link ЭСКИЗ
                 a(href='contacts.html').menu__link КОНТАКТЫ
                 a(href='faq.html').menu__link FAQ
 
