--- a/src/pages/masterKO.pug
+++ b/src/pages/masterKO.pug
@@ -30,6 +30,7 @@ block content
             div.slider
                 img.img.curry(src=require("../images/masters/960x960 (1).jpg"))
                 img.img(src=require("../images/index/last/b.jpg"))
+                img.img(src=require("../images/index/last/b.jpg"))
                 img.img(src=require("../images/index/last/c.jpg"))
                 img.img(src=require("../images/index/last/d.jpg"))
                 img.img(src=require("../images/index/last/e.jpg"))
