--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,11 +1,11 @@
 @import "scss/vars";
-@import "scss/main";
+@import "scss/layout";
 @import "scss/index";
+@import "scss/sketch";
+@import "scss/recording";
 @import "scss/contacts";
 @import "scss/faq";
-@import "scss/recording";
 @import "scss/masters";
-@import "scss/sketch";
 @import "../../node_modules/normalize.css/normalize.css";
 @import '../../node_modules/bootstrap/dist/css/bootstrap.min.css';
 //@import '../../node_modules/mini-css-extract-plugin/dist/loader.js';
