--- a/src/styles/scss/vars.scss
+++ b/src/styles/scss/vars.scss
@@ -1,8 +1,7 @@
 $colorMenu: #3f5791;
-$colorPink: #FFB0B0;
-$colorWhite: #FCF1F1;
+$colorWhite: rgba(241, 248, 252, 0.53);
 $colorBlack: #313131;
-$colorTextHover: #814D4D;
+//$colorTextHover: #814D4D;
 
 $widthTablet: 1150;
 $widthPhone: 767;
