--- a/src/pages/include/layout.pug
+++ b/src/pages/include/layout.pug
@@ -6,36 +6,34 @@ html(lang="en")
         meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
         meta(charset='utf-8')
     body#zabey(class=`${bodyAdditionClass}`)
-        header.header.inner
-            a(href='/')
-                img.header__logo(src=require("../images/layout/logo.svg"))
-            nav.menu
-                a(href='/').menu__link ГЛАВНАЯ
-                a(href='recording.html').menu__link ЗАПИСЬ
-                a(href='sketch.html').menu__link ЭСКИЗ
-                a(href='contacts.html').menu__link КОНТАКТЫ
-                a(href='faq.html').menu__link FAQ
-        block content
+        section.inner
+            div.container
+                div.row
+                    div.col-12
+                        nav.navbar.navbar-expand-lg.navbar-light.bg-light
+                            a.navbar-brand(href='/')
+                                img.logo(src=require("../images/layout/logo.svg") alt="logo")
+                            button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
+                                span.navbar-toggler-icon
+                            div.collapse.navbar-collapse(id="navbarSupportedContent")
+                                ul.navbar-nav.ml-auto
+                                    li.nav-item.mx-auto
+                                        a.nav-link.menu-link(href='/') ГЛАВНАЯ
+                                    li.nav-item.mx-auto
+                                        a.nav-link.menu-link(href='recording.html') ЗАПИСЬ
+                                    li.nav-item.mx-auto
+                                        a.nav-link.menu-link(href='sketch.html') ЭСКИЗ
+                                    li.nav-item.mx-auto
+                                        a.nav-link.menu-link(href='contacts.html') КОНТАКТЫ
+                                    li.nav-item.mx-auto
+                                        a.nav-link.menu-link(href='faq.html') FAQ
 
-        div.footer-decoration
-            footer.footer.inner
-                //a(href="#", target="_blank").vers verslibre
-                //div.footer-menu
-                    a(href='#').footer-menu__link ГЛАВНАЯ
-                    a(href='#').footer-menu__link ЗАПИСЬ
-                    a(href='#').footer-menu__link КОНТАКТЫ
-                    a(href='#').footer-menu__link FAQ
-                //div.footer-contact
-                    div.footer-contact__phone
-                        img.footer-img(src=require("../images/layout/footer-phone.svg"))
-                        p +7 (950) 904-34-25
-                    div.footer-contact__map
-                        img.footer-img(src=require("../images/layout/footer-map.svg"))
-                        p Тула, ул.Демидовская #[br] (Заречье), дом 74
-                //div.footer-social-media
-                    a(href='https://www.instagram.com/zabey_tattoostudio/' target="_blank")
-                        img.footer-img(src=require("../images/layout/instagram.svg"))
-                    a(href='https://vk.com/zabey_tattoostudio' target="_blank")
-                        img.footer-img(src=require("../images/layout/vk.svg"))
+        block content
+        div.container
+        div.row
+            div.col-12
+                div.footer-decoration
+                    footer.footer.inner
+
 
 
